Fix icon alignments in header bar

--- a/css/window.css
+++ b/css/window.css
@@ -401,7 +401,7 @@
 		width: 68px;
 		flex-shrink: 0;
 	}
-	#settings_profiles_header_menu {
+	body:not(.is_mobile) #settings_profiles_header_menu {
 		width: 24px;
 		text-align: center;
 		padding-top: 2px;
@@ -586,18 +586,18 @@
 	li.menu_bar_point.highlighted {
 		animation: menu_item_highlight 1s infinite ease-in-out;
 	}
-	header .tool {
+	body.is_mobile header .tool {
 		height: 100%;
 		width: 42px;
 	}
-	header .tool > .icon {
+	body.is_mobile header .tool > .icon {
 		margin-top: 7px;
+	}
+	body:not(.is_mobile) header .tool > .icon {
+		margin-top: 2px;
 	}
 	header .tool.hidden {
 		display: none;
-	}
-	body.is_mobile.is_landscape #title_bar_undo_controls {
-		display: block;
 	}
 
 	#mode_selector {
